Add sidechain activation by voting
* Add sidechain activation consensus rules, update mempool, scdb,
    validation, wallet, init, UI (RPC mostly) for sidechain activation by vote.

* Add sidechain proposal & activation commitment script definitions

* Add sidechain activation cache & DAT files

* Add sidechain proposal & activation commitment optiosn to miner

* Add sidechain activation unit tests

* Add -activatesidechains command line param

* Show message on sidechain page when no sidechains are activated yet

* Add basic sidechain activation RPC functions

* Update title & app name DriveNetTESTDRIVE -> DriveNet

* Update README file and other text DriveNetTESTDRIVE -> DriveNet

--- a/src/qt/drivenet.qrc
+++ b/src/qt/drivenet.qrc
@@ -29,6 +29,7 @@
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
         <file alias="export">res/icons/export.png</file>
+        <file alias="sidechain_default">res/icons/sidechain_default.png</file>
         <file alias="sidechain_one">res/icons/sidechain_one.png</file>
         <file alias="sidechain_payments">res/icons/sidechain_payments.png</file>
         <file alias="synced">res/icons/synced.png</file>
