--- a/src/qt/forms/confgeneratordialog.ui
+++ b/src/qt/forms/confgeneratordialog.ui
@@ -112,8 +112,8 @@
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Warning: 
-Clicking &quot;Apply&quot; will automatically generate configuration files for all active sidechain(s) and for DriveNetTESTDRIVE. Existing configuration files will have &quot;.OLD&quot; appended to the file name to back them up.
+      <string>Warning:
+Clicking &quot;Apply&quot; will automatically generate configuration files for all active sidechain(s) and for DriveNet. Existing configuration files will have &quot;.OLD&quot; appended to the file name to back them up.
 
 Randomly generated usernames  / password should be assumed to be insecure.</string>
      </property>
