--- a/src/qt/forms/sidechainminerdialog.ui
+++ b/src/qt/forms/sidechainminerdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>672</width>
-    <height>473</height>
+    <width>637</width>
+    <height>641</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -258,6 +258,23 @@
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_6">
              <item>
+              <widget class="QLabel" name="label_13">
+               <property name="text">
+                <string>Version</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="spinBoxVersion">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="maximum">
+                <number>0</number>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QLabel" name="label_4">
                <property name="text">
                 <string>Title</string>
@@ -291,7 +308,7 @@
              <item>
               <widget class="QLabel" name="label_6">
                <property name="text">
-                <string>Sidechain release hash</string>
+                <string>Sidechain key hash</string>
                </property>
               </widget>
              </item>
@@ -304,18 +321,121 @@
                 <enum>QFrame::Raised</enum>
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>6</number>
+                </property>
                 <item>
                  <widget class="QLineEdit" name="lineEditHash">
                   <property name="text">
                    <string/>
                   </property>
                   <property name="placeholderText">
-                   <string>Sidechain deterministic build release hash</string>
+                   <string>Sidechain key SHA256 hash</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QToolButton" name="toolButtonReleaseHash">
+                 <widget class="QPushButton" name="pushButtonRandomKeyHash">
+                  <property name="text">
+                   <string>Random</string>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../drivenet.qrc">
+                    <normaloff>:/icons/refresh</normaloff>:/icons/refresh</iconset>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QToolButton" name="toolButtonKeyHash">
+                  <property name="text">
+                   <string>...</string>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../drivenet.qrc">
+                    <normaloff>:/icons/transaction_0</normaloff>:/icons/transaction_0</iconset>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_11">
+               <property name="text">
+                <string>Release tarball hash</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QFrame" name="frame_9">
+               <property name="frameShape">
+                <enum>QFrame::NoFrame</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
+               </property>
+               <layout class="QHBoxLayout" name="horizontalLayout_5">
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>6</number>
+                </property>
+                <item>
+                 <widget class="QLineEdit" name="lineEditIDHash1">
+                  <property name="placeholderText">
+                   <string>Gitian build tarball hash (Linux x86-64)</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QToolButton" name="toolButtonIDHash1">
+                  <property name="text">
+                   <string>...</string>
+                  </property>
+                  <property name="icon">
+                   <iconset resource="../drivenet.qrc">
+                    <normaloff>:/icons/transaction_0</normaloff>:/icons/transaction_0</iconset>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_12">
+               <property name="text">
+                <string>Build commit hash</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QFrame" name="frame_10">
+               <property name="frameShape">
+                <enum>QFrame::NoFrame</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Raised</enum>
+               </property>
+               <layout class="QHBoxLayout" name="horizontalLayout_6">
+                <property name="topMargin">
+                 <number>0</number>
+                </property>
+                <property name="bottomMargin">
+                 <number>6</number>
+                </property>
+                <item>
+                 <widget class="QLineEdit" name="lineEditIDHash2">
+                  <property name="placeholderText">
+                   <string>Gitian build commit hash</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QToolButton" name="toolButtonIDHash2">
                   <property name="text">
                    <string>...</string>
                   </property>
@@ -339,6 +459,9 @@
               <spacer name="verticalSpacer_2">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Maximum</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
