--- a/src/qt/forms/sidechainpage.ui
+++ b/src/qt/forms/sidechainpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>646</width>
-    <height>417</height>
+    <width>634</width>
+    <height>395</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -84,7 +84,7 @@
           <item>
            <widget class="QStackedWidget" name="stackedWidgetSecondary">
             <property name="currentIndex">
-             <number>0</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="page_3">
              <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -292,6 +292,9 @@
              <layout class="QVBoxLayout" name="verticalLayout_12">
               <item>
                <widget class="QLabel" name="label_6">
+                <property name="frameShape">
+                 <enum>QFrame::NoFrame</enum>
+                </property>
                 <property name="text">
                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Sorry, no sidechains have been activated yet. &lt;/p&gt;&lt;p&gt;Please check back later!&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
@@ -309,23 +312,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="page_2">
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
